--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<html>
+    <head>
+        <title>Archana Mohandas</title>
+    </head>
+    <body>
+        <h?> Archana Mohandas </h?>
+        <p>I am an undergraduate at MIT studying mathematics (<a href="https://math.mit.edu/academics/undergrad/major/index.html">Course 18</a>). I am broadly interested in topology and geometry. </p>
+        <p>Email: amohanda "at" mit "dot" edu (<a href="https://math.mit.edu/academics/undergrad/major/index.html">Course 18</a>). I am broadly interested in topology and geometry. </p>
+        <p>Research: Ancient Caloric Functions on Strip-Type Graphs (pending submission to Proceedings of the AMS)
+        <p>Short CV: <p>
+        <p>Outside Math:<p>
+    </body>
+</html>
