--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <body>
         <h?> Archana Mohandas </h?>
         <p>I am an undergraduate at MIT studying mathematics (<a href="https://math.mit.edu/academics/undergrad/major/index.html">Course 18</a>). I am broadly interested in topology and geometry. </p>
-        <p>Email: amohanda "at" mit "dot" edu (<a href="https://math.mit.edu/academics/undergrad/major/index.html">Course 18</a>). I am broadly interested in topology and geometry. </p>
-        <p>Research: Ancient Caloric Functions on Strip-Type Graphs (pending submission to Proceedings of the AMS)
+        <p>Email: amohanda "at" mit "dot" edu. </p>
+        <p>Research: Ancient Caloric Functions on Strip-Type Graphs (pending submission to Proceedings of the AMS)<p>
         <p>Short CV: <p>
         <p>Outside Math:<p>
     </body>
